--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Primera pagina</title>
+
   </head>
+  <script src="js/script.js" type="text/javascript"></script>
   <body>
 
   </body>
