--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Primera pagina</title>
+    <script src="login/login.js" type="text/javascript"></script>
   </head>
   <body>
 
